--- a/admin/view/template/extension/payment/dibseasy.twig
+++ b/admin/view/template/extension/payment/dibseasy.twig
@@ -25,10 +25,13 @@
       </div>
       <div class="panel-body">
         <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-payment" class="form-horizontal">
-          <div class="form-group">
+          <div class="form-group required">
             <label class="col-sm-2 control-label" for="input-total">{{ entry_dibseasy_merchant }}</label>
             <div class="col-sm-10">
               <input type="text" name="dibseasy_merchant" value="{{ dibseasy_merchant }}" id="input-total" class="form-control" />
+              {% if error_merchant %}
+                <div class="text-danger">{{ error_merchant }}</div>
+              {% endif %}
             </div>
           </div> 
           <div class="form-group">
@@ -85,10 +88,13 @@
             </div>
           </div>
            
-          <div class="form-group">
+          <div class="form-group required">
             <label class="col-sm-2 control-label" for="dibseasy_terms_and_conditions">{{ entry_dibseasy_terms_and_conditions }}</label>
             <div class="col-sm-10">
-              <input type="text" name="dibseasy_terms_and_conditions" placeholder="https://" value="{{ dibseasy_term_and_conditions }}" id="dibseasy_term_and_conditions" class="form-control" />
+              <input type="text" name="dibseasy_terms_and_conditions" placeholder="http[s]://" value="{{ dibseasy_terms_and_conditions }}" id="dibseasy_term_and_conditions" class="form-control" />
+              {% if error_easy_term_and_conditions %}
+                <div class="text-danger">{{ error_easy_term_and_conditions }}</div>
+              {% endif %}
             </div>
           </div> 
               
