redirect to checkout/checkout in case of Easy loading fail

--- a/catalog/view/theme/default/template/checkout/dibseasy.twig
+++ b/catalog/view/theme/default/template/checkout/dibseasy.twig
@@ -145,7 +145,7 @@
           }).done(function(result) {
             var result = JSON.parse(result);
             if(result.exception == 1) {
-                window.location.href = 'index.php?route=checkout/cart';
+                window.location.href = '{{ checkout_url }}';
             }
             $('#dibs-easy-controls').html(result.outputHtml);
             ct.checkout.thawCheckout();
