--- a/admin/view/template/extension/payment/dibseasy.twig
+++ b/admin/view/template/extension/payment/dibseasy.twig
@@ -34,14 +34,14 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="input-total">{{ entry_dibseasy_livekey }}</label>
             <div class="col-sm-10">
-              <input type="text" name="dibseasy_livekey" value="{{ dibseasy_livekey }}" id="input-total" class="form-control" />
+              <input type="text" name="payment_dibseasy_livekey" value="{{ payment_dibseasy_livekey }}" id="input-total" class="form-control" />
             </div>
           </div> 
 
           <div class="form-group">
             <label class="col-sm-2 control-label" for="input-total">{{ entry_dibseasy_checkoutkey_live }}</label>
             <div class="col-sm-10">
-              <input type="text" name="dibseasy_checkoutkey_live" value="{{ dibseasy_checkoutkey_live }}" id="input-total" class="form-control" />
+              <input type="text" name="payment_dibseasy_checkoutkey_live" value="{{ payment_dibseasy_checkoutkey_live }}" id="input-total" class="form-control" />
             </div>
           </div> 
 
@@ -54,22 +54,22 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="input-total">{{ entry_dibseasy_livekey }}</label>
             <div class="col-sm-10">
-              <input type="text" name="dibseasy_testkey" value="{{ dibseasy_testkey }}" id="input-total" class="form-control" />
+              <input type="text" name="payment_dibseasy_testkey" value="{{ payment_dibseasy_testkey }}" id="input-total" class="form-control" />
             </div>
           </div> 
           <div class="form-group">
             <label class="col-sm-2 control-label" for="input-total">{{ entry_dibseasy_checkoutkey_live }}</label>
             <div class="col-sm-10">
-              <input type="text" name="dibseasy_checkoutkey_test" value="{{ dibseasy_checkoutkey_test }}" id="input-total" class="form-control" />
+              <input type="text" name="payment_dibseasy_checkoutkey_test" value="{{ payment_dibseasy_checkoutkey_test }}" id="input-total" class="form-control" />
             </div>
           </div> 
 
           <div class="form-group">
             <label class="col-sm-2 control-label" for="input-order-status">{{ entry_order_status }}</label>
             <div class="col-sm-10">
-              <select name="dibseasy_order_status_id" id="input-order-status" class="form-control">
+              <select name="payment_dibseasy_order_status_id" id="input-order-status" class="form-control">
                 {% for order_status in order_statuses %}
-                {% if order_status.order_status_id == dibseasy_order_status_id %}
+                {% if order_status.order_status_id == payment_dibseasy_order_status_id %}
                 <option value="{{ order_status.order_status_id }}" selected="selected">{{ order_status.name }}</option>
                 {% else %}
                 <option value="{{ order_status.order_status_id }}"> {{order_status.name}}</option>
@@ -82,7 +82,7 @@
           <div class="form-group required">
             <label class="col-sm-2 control-label" for="dibseasy_terms_and_conditions">{{ entry_dibseasy_terms_and_conditions }}</label>
             <div class="col-sm-10">
-              <input type="text" name="dibseasy_terms_and_conditions" placeholder="http[s]://" value="{{ dibseasy_terms_and_conditions }}" id="dibseasy_term_and_conditions" class="form-control" />
+              <input type="text" name="payment_dibseasy_terms_and_conditions" placeholder="http[s]://" value="{{ payment_dibseasy_terms_and_conditions }}" id="dibseasy_term_and_conditions" class="form-control" />
               {% if error_easy_term_and_conditions %}
                 <div class="text-danger">{{ error_easy_term_and_conditions }}</div>
               {% endif %}
@@ -92,14 +92,14 @@
          <div class="form-group">
             <label class="col-sm-2 control-label" for="input-checkout_button_url"><span data-toggle="tooltip" title="{{entry_dibseasy_otherpayment_button_url_comment}}">{{entry_dibseasy_otherpayment_button_url}}</span></label>
             <div class="col-sm-10">
-              <input type="text" name="dibseasy_otherpayment_button_url" value="{{dibseasy_otherpayment_button_url}}" id="input-checkout_button_url" class="form-control" />
+              <input type="text" name="payment_dibseasy_otherpayment_button_url" value="{{payment_dibseasy_otherpayment_button_url}}" id="input-checkout_button_url" class="form-control" />
             </div>
          </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-order-status">{{entry_allowed_customer_type}}</label>
+            <label class="col-sm-2 control-label" for="input-customer-type">{{entry_allowed_customer_type}}</label>
             <div class="col-sm-10">
-              <select name="dibseasy_allowed_customer_type" id="input-allowed_customer_type" class="form-control">
+              <select name="payment_dibseasy_allowed_customer_type" id="input-allowed_customer_type" class="form-control">
                     <option value="b2c" {{b2c_selected }}>  {{text_b2c}} </option>
                     <option value="b2b" {{b2b_selected }}>  {{text_b2b}} </option>
                     <option value="b2c_b2b_b2c" {{ b2c_b2b_b2c_selected }}>  {{text_b2c_b2b_b2c}} </option>
@@ -109,10 +109,10 @@
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-order-status">{{ entry_testmode }}</label>
+            <label class="col-sm-2 control-label" for="input-testmode">{{ entry_testmode }}</label>
             <div class="col-sm-10">
-              <select name="dibseasy_testmode" id="input-status" class="form-control">
-                  {% if  dibseasy_testmode %}
+              <select name="payment_dibseasy_testmode" id="input-status" class="form-control">
+                  {% if  payment_dibseasy_testmode %}
                       <option value="1" selected="selected">{{text_enabled}}</option>
                       <option value="0">{{text_disabled}}</option>
                       {% else %}
@@ -124,9 +124,9 @@
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-order-status">{{ entry_language }}</label>
+            <label class="col-sm-2 control-label" for="input-language">{{ entry_language }}</label>
             <div class="col-sm-10">
-              <select name="dibseasy_language" id="input-status" class="form-control">
+              <select name="payment_dibseasy_language" id="input-status" class="form-control">
                  <option value="en-GB" {{ english_selected }}>  {{text_english }} </option>
                  <option value="sv-SE" {{ swedish_selected }}>  {{ text_swedish }} </option>
                  <option value="nb-NO" {{ norwegian_select }}>  {{ text_norwegian }} </option>
@@ -136,10 +136,10 @@
           </div>
 
           <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-order-status">{{ entry_status }}</label>
+            <label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
             <div class="col-sm-10">
-              <select name="dibseasy_status" id="input-status" class="form-control">
-                   {% if dibseasy_status %}
+              <select name="payment_dibseasy_status" id="input-status" class="form-control">
+                   {% if payment_dibseasy_status %}
                         <option value="1" selected="selected"> {{text_enabled}}</option>
                         <option value="0"> {{text_disabled}} </option>
                     {% else %}
