stock validation, improvements

--- a/catalog/view/theme/default/stylesheet/easy_checkout.css
+++ b/catalog/view/theme/default/stylesheet/easy_checkout.css
@@ -17,12 +17,12 @@
 
     #dibs-easy-controls {
         float: left;
-        width: 500px;
+        width: 44%;
     }
 
     #dibs-easy-window {
         float: left;
-        width: 600px;
+        width: 54%;
         margin-left: 20px;
     }
 
