--- a/admin/view/template/extension/payment/dibseasy.twig
+++ b/admin/view/template/extension/payment/dibseasy.twig
@@ -124,6 +124,21 @@
           </div>
 
           <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-checkout-type">{{ entry_checkout_type }}</label>
+            <div class="col-sm-10">
+              <select name="payment_dibseasy_checkout_type" id="input-status" class="form-control">
+                  {% if payment_dibseasy_checkout_type == 'embedded' %}
+                      <option value="embedded" selected="selected">{{text_checkout_type_embedded}}</option>
+                      <option value="hosted">{{text_checkout_type_hosted}}</option>
+                      {% else %}
+                      <option value="embedded">{{text_checkout_type_embedded}}</option>
+                      <option value="hosted" selected="selected">{{text_checkout_type_hosted}}</option>
+                  {% endif %}
+              </select>
+            </div>
+          </div>
+
+          <div class="form-group">
             <label class="col-sm-2 control-label" for="input-language">{{ entry_language }}</label>
             <div class="col-sm-10">
               <select name="payment_dibseasy_language" id="input-status" class="form-control">
