--- a/admin/view/template/extension/payment/dibseasy.twig
+++ b/admin/view/template/extension/payment/dibseasy.twig
@@ -87,7 +87,7 @@
                 <div class="text-danger">{{ error_easy_term_and_conditions }}</div>
               {% endif %}
             </div>
-          </div>
+         </div>
 
          <div class="form-group">
             <label class="col-sm-2 control-label" for="input-checkout_button_url"><span data-toggle="tooltip" title="{{entry_dibseasy_otherpayment_button_url_comment}}">{{entry_dibseasy_otherpayment_button_url}}</span></label>
@@ -149,7 +149,6 @@
               </select>
             </div>
           </div>
-
           <div class="form-group">
             <label class="col-sm-2 control-label" for="input-status">{{ entry_status }}</label>
             <div class="col-sm-10">
@@ -164,7 +163,12 @@
               </select>
             </div>
           </div>
-
+         <div class="form-group">
+            <label class="col-sm-2 control-label" for="dibseasy_sort_order"> {{ entry_dibseasy_sort_order }} </label>
+            <div class="col-sm-10">
+              <input type="text" name="payment_dibseasy_sort_order" value="{{ payment_dibseasy_sort_order }}" id="dibseasy_sort_order" class="form-control" />
+            </div>
+         </div>
         <!--  <div class="form-group">
             <label class="col-sm-2 control-label" for="input-order-status">{{ entry_debug }}</label>
             <div class="col-sm-10">
@@ -179,7 +183,6 @@
               </select>
             </div>
           </div> -->
-
         </form>
       </div>
     </div>
