--- a/catalog/view/theme/default/template/checkout/dibseasy.twig
+++ b/catalog/view/theme/default/template/checkout/dibseasy.twig
@@ -77,6 +77,7 @@
                 </form>
             </div>
         </div>
+        <div style="clear:both;"></div>
     </div>
     {{ column_right }}</div>
 </div>
