--- a/catalog/view/theme/default/template/checkout/dibseasy_totals.twig
+++ b/catalog/view/theme/default/template/checkout/dibseasy_totals.twig
@@ -27,18 +27,33 @@
             <td class="dibs-easy-totals-lable" id="dibs-easy-totals-lable-{{ total.code }}" id="dibs-easy-totals-lable-{{ total.code }}">{{total.title }}</td>  
             <td class="dibs-easy-totals-total" id="dibs-easy-totals-{{ total.code }}" id="dibs-easy-totals-{{ total.code }}" align="right">{{ total.value }}</td>
          {% endif %}
+         
+         
          {% if total.code == "shipping" %}
             <td class="dibs-easy-totals-lable" id="dibs-easy-totals-lable-{{ total.code }}" id="dibs-easy-totals-lable-{{ total.code }}">{{ shipping_total_label }}</td>  
-            <td class="dibs-easy-totals-total" id="dibs-easy-totals-{{ total.code }}" id="dibs-easy-totals-{{ total.code }}" align="right">{{ total.title }}</td>
+            <td class="dibs-easy-totals-total" id="dibs-easy-totals-{{ total.code }}" id="dibs-easy-totals-{{ total.code }}" align="right">
+            <span id="dibs-easy-grand-shipping-value">{{ total.value }}</span></td>
          {% endif %}
+         
+         {% if total.code == "tax_total_value" %}
+            <td class="dibs-easy-totals-lable1">{{ total.title }}</td>  
+            <td class="dibs-easy-totals-total1" align="right">
+            <span id="dibs-easy-ing-value">{{ total.value }}</span></td>
+         {% endif %}
+      </tr>
+   {% endfor %}
+   
+     {% for total in totals.totals %}
+      <tr id="tr-grand-total-id">
          {% if total.code == "total" %}
-            <td class="dibs-easy-totals-lable" id="dibs-easy-totals-lable-{{ total.code }}" id="dibs-easy-totals-lable-{{ total.code }}">{{total.title }}</td>  
+            <td class="dibs-easy-totals-lable" id="dibs-easy-totals-lable-{{total.code}}" id="dibs-easy-totals-lable-{{total.code}}">{{total.title }}</td>  
             <td class="dibs-easy-totals-total" id="dibs-easy-totals-{{ total.code }}" id="dibs-easy-totals-{{ total.code }}" align="right">
             <span id="dibs-easy-grand-total-currency">{{ currency_code }}</span><span id="dibs-easy-grand-total-value">{{ total.value }}</span>  
             </td>
          {% endif %}
       </tr>
    {% endfor %}
+   
   </tbody>
  </table>
 <div id="dibseasy-switch-checkout-screen">
