--- a/catalog/view/theme/default/template/checkout/dibseasy_totals.twig
+++ b/catalog/view/theme/default/template/checkout/dibseasy_totals.twig
@@ -34,6 +34,12 @@
             <td class="dibs-easy-totals-total" id="dibs-easy-totals-{{ total.code }}" id="dibs-easy-totals-{{ total.code }}" align="right">
             <span id="dibs-easy-grand-shipping-value">{{ total.value }}</span></td>
          {% endif %}
+
+          {% if total.code == "coupon" %}
+              <td class="dibs-easy-totals-lable" id="dibs-easy-totals-lable-{{ total.code }}" id="dibs-easy-totals-lable-{{ total.code }}">{{ total.title }}</td>
+              <td class="dibs-easy-totals-total" id="dibs-easy-totals-{{ total.code }}" id="dibs-easy-totals-{{ total.code }}" align="right">
+                  <span id="dibs-easy-grand-shipping-value">{{ total.value }}</span></td>
+          {% endif %}
          
          {% if total.code == "tax_total_value" %}
             <td class="dibs-easy-totals-lable1">{{ total.title }}</td>  
