Added easy features and update payment status

--- a/admin/view/template/extension/payment/dibseasy.twig
+++ b/admin/view/template/extension/payment/dibseasy.twig
@@ -89,6 +89,16 @@
             </div>
          </div>
 
+         <div class="form-group required">
+            <label class="col-sm-2 control-label" for="dibseasy_merchant_terms_and_conditions">{{ entry_dibseasy_merchant_terms_and_conditions }}</label>
+            <div class="col-sm-10">
+              <input type="text" name="payment_dibseasy_merchant_terms_and_conditions" placeholder="http[s]://" value="{{ payment_dibseasy_merchant_terms_and_conditions }}" id="dibseasy_merchant_term_and_conditions" class="form-control" />
+              {% if error_easy_merchant_term_and_conditions %}
+                <div class="text-danger">{{ error_easy_merchant_term_and_conditions }}</div>
+              {% endif %}
+            </div>
+         </div>
+            
          <div class="form-group">
             <label class="col-sm-2 control-label" for="input-customer-type">{{entry_allowed_customer_type}}</label>
             <div class="col-sm-10">
@@ -162,6 +172,17 @@
               <input type="text" name="payment_dibseasy_sort_order" value="{{ payment_dibseasy_sort_order }}" id="dibseasy_sort_order" class="form-control" />
             </div>
          </div>
+         <div class="form-group">
+                <label class="col-sm-2 control-label" for="dibseasy_sort_order"> Auto Capture </label>                 
+                <div class="col-sm-10"> 
+                      {% if payment_dibseasy_autocapture %}
+                      <input type="checkbox" name="payment_dibseasy_autocapture" value="0" checked="checked" id="dibseasy_autocapture" class="form-control"/>
+                      {% else %}
+                      <input type="checkbox" name="payment_dibseasy_autocapture" value="1" id="dibseasy_autocapture" class="form-control" />
+                      {% endif %} 
+                </div>
+         </div>
+                
         <!--  <div class="form-group">
             <label class="col-sm-2 control-label" for="input-order-status">{{ entry_debug }}</label>
             <div class="col-sm-10">
